@@ -1,4 +1,6 @@
 Changes
+examples/check_angle_fail.pl
+examples/check_angle_ok.pl
 examples/check_array_fail.pl
 examples/check_array_object_fail.pl
 examples/check_array_object_ok.pl
@@ -44,19 +46,20 @@ README
 SIGNATURE
 t/Mo-utils/01-use.t
 t/Mo-utils/02-version.t
-t/Mo-utils/03-check_array.t
-t/Mo-utils/04-check_array_object.t
-t/Mo-utils/05-check_array_required.t
-t/Mo-utils/06-check_bool.t
-t/Mo-utils/07-check_code.t
-t/Mo-utils/08-check_isa.t
-t/Mo-utils/09-check_length.t
-t/Mo-utils/10-check_number.t
-t/Mo-utils/11-check_number_of_items.t
-t/Mo-utils/12-check_regexp.t
-t/Mo-utils/13-check_required.t
-t/Mo-utils/14-check_string_begin.t
-t/Mo-utils/15-check_strings.t
+t/Mo-utils/03-check_angle.t
+t/Mo-utils/04-check_array.t
+t/Mo-utils/05-check_array_object.t
+t/Mo-utils/06-check_array_required.t
+t/Mo-utils/07-check_bool.t
+t/Mo-utils/08-check_code.t
+t/Mo-utils/09-check_isa.t
+t/Mo-utils/10-check_length.t
+t/Mo-utils/11-check_number.t
+t/Mo-utils/12-check_number_of_items.t
+t/Mo-utils/13-check_regexp.t
+t/Mo-utils/14-check_required.t
+t/Mo-utils/15-check_string_begin.t
+t/Mo-utils/16-check_strings.t
 utils.pm
 xt/Mo-utils/01-pod_coverage.t
 xt/Mo-utils/02-pod.t
