@@ -2,10 +2,12 @@ NAME
     Mo::utils - Mo utilities.
 
 SYNOPSIS
-     use Mo::utils qw(check_array check_array_object check_array_required check_bool
-             check_code check_isa check_length check_number check_number_of_items
-             check_regexp check_required check_string_begin check_strings);
+     use Mo::utils qw(check_angle check_array check_array_object check_array_required
+             check_bool check_code check_isa check_length check_number
+             check_number_of_items check_regexp check_required check_string_begin
+             check_strings);
 
+     check_angle($self, $key);
      check_array($self, $key);
      check_array_object($self, $key, $class, $class_name);
      check_array_required($self, $key);
@@ -24,6 +26,15 @@ DESCRIPTION
     Mo utilities for checking of data objects.
 
 SUBROUTINES
+  "check_angle"
+     check_angle($self, $key);
+
+    Check parameter defined by $key which is number between 0 and 360.
+
+    Put error if check isn't ok.
+
+    Returns undef.
+
   "check_array"
      check_array($self, $key);
 
@@ -152,6 +163,13 @@ SUBROUTINES
     Returns undef.
 
 ERRORS
+     check_angle():
+             From check_number():
+                     Parameter '%s' must be a number.
+                             Value: %s
+             Parameter '%s' must be a number between 0 and 360.
+                     Value: %s
+
      check_array():
              Parameter '%s' must be a array.
                      Value: %s
@@ -220,6 +238,43 @@ EXAMPLE1
      use strict;
      use warnings;
 
+     use Mo::utils qw(check_angle);
+
+     my $self = {
+             'key' => 10.1,
+     };
+     check_angle($self, 'key');
+
+     # Print out.
+     print "ok\n";
+
+     # Output:
+     # ok
+
+EXAMPLE2
+     use strict;
+     use warnings;
+
+     use Error::Pure;
+     use Mo::utils qw(check_angle);
+
+     $Error::Pure::TYPE = 'Error';
+
+     my $self = {
+             'key' => 400,
+     };
+     check_angle($self, 'key');
+
+     # Print out.
+     print "ok\n";
+
+     # Output like:
+     # #Error [..utils.pm:?] Parameter 'key' must be a number between 0 and 360.
+
+EXAMPLE3
+     use strict;
+     use warnings;
+
      use Mo::utils qw(check_array);
 
      my $self = {
@@ -233,7 +288,7 @@ EXAMPLE1
      # Output:
      # ok
 
-EXAMPLE2
+EXAMPLE4
      use strict;
      use warnings;
 
@@ -253,7 +308,7 @@ EXAMPLE2
      # Output like:
      # #Error [..utils.pm:?] Parameter 'key' must be a array.
 
-EXAMPLE3
+EXAMPLE5
      use strict;
      use warnings;
 
@@ -273,7 +328,7 @@ EXAMPLE3
      # Output:
      # ok
 
-EXAMPLE4
+EXAMPLE6
      use strict;
      use warnings;
 
@@ -295,7 +350,7 @@ EXAMPLE4
      # Output like:
      # #Error [..utils.pm:?] Value isn't 'Test::MockObject' object.
 
-EXAMPLE5
+EXAMPLE7
      use strict;
      use warnings;
 
@@ -312,7 +367,7 @@ EXAMPLE5
      # Output:
      # ok
 
-EXAMPLE6
+EXAMPLE8
      use strict;
      use warnings;
 
@@ -332,7 +387,7 @@ EXAMPLE6
      # Output like:
      # #Error [..utils.pm:?] Parameter 'key' with array must have at least one item.
 
-EXAMPLE7
+EXAMPLE9
      use strict;
      use warnings;
 
@@ -350,7 +405,7 @@ EXAMPLE7
      # Output:
      # ok
 
-EXAMPLE8
+EXAMPLE10
      use strict;
      use warnings;
 
@@ -370,7 +425,7 @@ EXAMPLE8
      # Output like:
      # #Error [..utils.pm:?] Parameter 'key' must be a bool (0/1).
 
-EXAMPLE9
+EXAMPLE11
      use strict;
      use warnings;
 
@@ -388,7 +443,7 @@ EXAMPLE9
      # Output:
      # ok
 
-EXAMPLE10
+EXAMPLE12
      use strict;
      use warnings;
 
@@ -408,7 +463,7 @@ EXAMPLE10
      # Output like:
      # #Error [..utils.pm:?] Parameter 'key' must be a code.
 
-EXAMPLE11
+EXAMPLE13
      use strict;
      use warnings;
 
@@ -426,7 +481,7 @@ EXAMPLE11
      # Output:
      # ok
 
-EXAMPLE12
+EXAMPLE14
      use strict;
      use warnings;
 
@@ -445,7 +500,7 @@ EXAMPLE12
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must be a 'Test::MockObject' object.
 
-EXAMPLE13
+EXAMPLE15
      use strict;
      use warnings;
 
@@ -464,7 +519,7 @@ EXAMPLE13
      # Output like:
      # ok
 
-EXAMPLE14
+EXAMPLE16
      use strict;
      use warnings;
 
@@ -483,7 +538,7 @@ EXAMPLE14
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' has length greater than '2'.
 
-EXAMPLE15
+EXAMPLE17
      use strict;
      use warnings;
 
@@ -500,7 +555,7 @@ EXAMPLE15
      # Output:
      # ok
 
-EXAMPLE16
+EXAMPLE18
      use strict;
      use warnings;
 
@@ -519,7 +574,7 @@ EXAMPLE16
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must be a number.
 
-EXAMPLE17
+EXAMPLE19
      use strict;
      use warnings;
 
@@ -561,7 +616,7 @@ EXAMPLE17
      # Output like:
      # ok
 
-EXAMPLE18
+EXAMPLE20
      use strict;
      use warnings;
 
@@ -603,7 +658,7 @@ EXAMPLE18
      # Output like:
      # #Error [...utils.pm:?] Test for Item 'value1' has multiple values.
 
-EXAMPLE19
+EXAMPLE21
      use strict;
      use warnings;
 
@@ -620,7 +675,7 @@ EXAMPLE19
      # Output:
      # ok
 
-EXAMPLE20
+EXAMPLE22
      use strict;
      use warnings;
 
@@ -640,7 +695,7 @@ EXAMPLE20
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' does not match the specified regular expression.
 
-EXAMPLE21
+EXAMPLE23
      use strict;
      use warnings;
 
@@ -657,7 +712,7 @@ EXAMPLE21
      # Output:
      # ok
 
-EXAMPLE22
+EXAMPLE24
      use strict;
      use warnings;
 
@@ -677,7 +732,7 @@ EXAMPLE22
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' is required.
 
-EXAMPLE23
+EXAMPLE25
      use strict;
      use warnings;
 
@@ -694,7 +749,7 @@ EXAMPLE23
      # Output:
      # ok
 
-EXAMPLE24
+EXAMPLE26
      use strict;
      use warnings;
 
@@ -714,7 +769,7 @@ EXAMPLE24
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must begin with defined string base.
 
-EXAMPLE25
+EXAMPLE27
      use strict;
      use warnings;
 
@@ -731,7 +786,7 @@ EXAMPLE25
      # Output:
      # ok
 
-EXAMPLE26
+EXAMPLE28
      use strict;
      use warnings;
 
